add the html file

--- a/week_06/intro/slides.html
+++ b/week_06/intro/slides.html
@@ -61,6 +61,7 @@
 </li>
 <li class="fragment next">Books – My favorite is <a href="https://archive.org/details/Norman_Matloff___The_Art_of_R_Programming">The Art of R Programming</a> by Norman Matloff<br />
 </li>
+<li class="fragment next">Also <a href="http://r4ds.had.co.nz/">R for Data Science</a> (Grolemund &amp; Wickham) and <a href="https://ismayc.github.io/moderndiver-book/">A Modern Dive into Data with R</a> (Ismay)</li>
 <li class="fragment next">Online courses/tutorials – Any recommendations?<br />
 </li>
 <li class="fragment next">Learn R in R with the <a href="http://swirlstats.com/">swiRl</a> package<br />
