Ready for class.

--- a/week_11/dynamic_concepts/slides_concepts.html
+++ b/week_11/dynamic_concepts/slides_concepts.html
@@ -87,7 +87,7 @@ When I was playing Oregon Trail, people were planning ways to tie together their
 </center>
 <p>Probably so they could keep track of their Oregon Trail successes and failures.</p>
 </section><section id="statistical-analyses-and-reproducible-research" class="slide level2">
-<h2>Statistical Analyses and Reproducible Research</h2>
+<h2><a href="http://biostats.bepress.com/cgi/viewcontent.cgi?article=1001&amp;context=bioconductor">Statistical Analyses and Reproducible Research</a></h2>
 Gentleman and Lang, 2004<br />
 
 <center>
@@ -170,9 +170,35 @@ In other words, pretend knitr has not yet been invented. What needs to happen fo
 </li>
 <li class="fragment next"><em>Tangling</em> arranges the code chunk in a way that they are machine readable and runnable.<br />
 </li>
-<li class="fragment next"><p><em>Sweave</em> (Leisch 2002) uses R and XML to execute these ideas.</p></li>
-<li class="fragment next"></li>
+<li class="fragment next"><em>Sweave</em> (Leisch 2002) uses R and XML to execute these ideas.</li>
 </ul>
+</section><section id="future-directions" class="slide level2">
+<h2>Future directions</h2>
+<ul>
+<li class="fragment next">Multi-language compendiums<br />
+</li>
+<li class="fragment next">Conditional chunks to tweak documents for different audiences<br />
+</li>
+<li class="fragment next">Interactivity<br />
+</li>
+<li class="fragment next">Metadata</li>
+</ul>
+</section><section id="what-are-some-barriers-to-the-creation-and-use-of-compendiums-and-dynamic-documents" class="slide level2">
+<h2>What are some barriers to the creation and use of compendiums and dynamic documents?</h2>
+<ul>
+<li class="fragment next">In general<br />
+</li>
+<li class="fragment next">For you personally</li>
+</ul>
+</section><section id="challenge" class="slide level2 cover white">
+<h2>Challenge!</h2>
+<!-- image source https://www.flickr.com/photos/ollemhebb/16691684354/in/photolist-rqZfeh-dB2HGy-j4rtWV-cswQCb-bnmKUX-rurYD7-5vmdw6-7iHPtj-bvggjZ-7nwAyK-oVZdhD-acwkds-dqAf8f-e4z5Jk-6PBenY-dSAYZ9-5vmcGR-e4z7be-cyGrpE-7WLPaw-5vmdnn-8ciEWU-5vmcDa-o2NbGq-dxpJTW-cyGt4d-dZy9Sm-dZssjK-oVZ3SB-5BtrCp-e4z5Mk-6bvjNs-8cfk5H-dzTiW2-7Yfj3T-9mraHV-5XmJTS-aDtnzj-ruXg4M-ecF3x2-aAU6Fg-bsQosb-Hgh9UM-kJti5g-ifdCE4-ceXXhf-7AdkFZ-aEDYpr-otaizi-sa1Phn -->
+<p><img src="images/your_turn.jpg" class="cover height" /></p>
+<p style="color:black">
+<p>
+Find an article published with a compendium or dynamic document in your discipline.
+</p>
+</p>
 </section>
 
   <!--
