A couple more gifs

--- a/week_11/dynamic_concepts/slides_concepts.html
+++ b/week_11/dynamic_concepts/slides_concepts.html
@@ -183,6 +183,11 @@ In other words, pretend knitr has not yet been invented. What needs to happen fo
 </li>
 <li class="fragment next">Metadata</li>
 </ul>
+</section><section id="section-1" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/anyquestions.gif" width="600px"/>
+</center>
 </section><section id="what-are-some-barriers-to-the-creation-and-use-of-compendiums-and-dynamic-documents" class="slide level2">
 <h2>What are some barriers to the creation and use of compendiums and dynamic documents?</h2>
 <ul>
@@ -199,6 +204,11 @@ In other words, pretend knitr has not yet been invented. What needs to happen fo
 Find an article published with a compendium or dynamic document in your discipline.
 </p>
 </p>
+</section><section id="section-2" class="slide level2">
+<h2></h2>
+<center>
+<img src="images/davidpumpkins.gif" width="600px"/>
+</center>
 </section>
 
   <!--
