--- a/week_11/dynamic_concepts/slides_concepts.html
+++ b/week_11/dynamic_concepts/slides_concepts.html
@@ -27,7 +27,7 @@
 
     
   
-<section id="the-role-of-dynamic-documents-in-reproduciblity" class="titleslide slide level1"><h2 class="shout">The Role of Dynamic Documents in Reproduciblity</h2></section><section id="what-is-a-dynamic-document" class="slide level2">
+<section id="the-role-of-dynamic-documents-in-reproducibility" class="titleslide slide level1"><h2 class="shout">The Role of Dynamic Documents in Reproducibility</h2></section><section id="what-is-a-dynamic-document" class="slide level2">
 <h2>What is a dynamic document?</h2>
 <ul>
 <li class="fragment next">A dynamic document incorporates changes made in your work as you work.<br />
