a few more slides done

--- a/week_12/rmd_slides/slides_slides.html
+++ b/week_12/rmd_slides/slides_slides.html
@@ -58,12 +58,37 @@
 <ul>
 <li>However, CSS templates are out there<br />
 </li>
-<li>Some HTML relatively easy to find and implement e.g<br />
+<li>Some HTML relatively easy to find and implement e.g.:<br />
 <code>&lt;center&gt;&lt;img src=&quot;images/awake.gif&quot; width=&quot;400px&quot;/&gt;&lt;/center&gt;</code>
 <center>
 <img src="images/inception_awake.gif" width="400px"/>
 </center></li>
 </ul></li>
+</ul>
+</section>
+<section id="three-rmarkdown-options-in-rstudio" class="slide level2">
+<h2>Three Rmarkdown options in RStudio</h2>
+<ul>
+<li>ioslides (html)<br />
+</li>
+<li>Slidy (html)<br />
+</li>
+<li>Beamer (pdf)</li>
+</ul>
+<p>*ioslides has more default styling than Slidy, but both can be changed using a styling sheet (CSS)</p>
+</section>
+<section id="yaml-options" class="slide level2">
+<h2>YAML Options</h2>
+<ul>
+<li>Rendering – <code>incremental: true</code><br />
+</li>
+<li>Screen size –<code>widescreen: true</code><br />
+</li>
+<li>Text size – <code>smaller: true</code><br />
+</li>
+<li>Transiton speed – <code>transition: slower</code><br />
+</li>
+<li>Custom CSS – <code>css: styles.css</code></li>
 </ul>
 </section>
 <section id="display-modes" class="slide level2">
