Fixed a couple typos

--- a/week_12/rmd_slides/slides_slides.html
+++ b/week_12/rmd_slides/slides_slides.html
@@ -127,9 +127,9 @@
 </li>
 <li>Custom CSS – <code>css: styles.css</code><br />
 </li>
-<li>Add a logo – <code>logo.png</code><br />
+<li>Add a logo – <code>logo:logo.png</code><br />
 </li>
-<li>and more. . .</li>
+<li>Lines and tabs are important in YAML!</li>
 </ul>
 </section>
 <section id="slide-basics" class="slide level2">
@@ -224,8 +224,7 @@ y <span class="er">&lt;</span>- x * 2
 <section id="presenter-mode" class="slide level2">
 <h2>Presenter mode</h2>
 <ul>
-<li>Rmarkdown offers a presenter mode<br />
-</li>
+<li>Rmarkdown offers a presenter mode (<code>p</code>)</li>
 <li>Shows presenter notes and a thumbnail of the next slide<br />
 </li>
 <li>Enable presenter mode by adding <code>?presentme=true</code> to the URL of the presentation<br />
